--- a/config/viirs_awips.yml
+++ b/config/viirs_awips.yml
@@ -1,4 +1,4 @@
-driver: viirs2awips.sh
+driver: "unset POLAR2GRID_HOME; /opt/cspp/polar2grid_v_2_3/bin/viirs2awips.sh "
 driver_crefl_old: crefl2awips.sh
 configs:
   default:
