--- a/config/mirs_l0.yml
+++ b/config/mirs_l0.yml
@@ -1,31 +1,36 @@
 processing:
-  npp: 
+  npp:
     save:
       - "NPR-MIRS-IMG*.nc"
       - "NPR-MIRS-SND*.nc"
-    driver: "run_mirs.bash  -v -f --dynanc=/cspp/dyno/mirs -p 6 -s npp "
+    driver: "run_mirs.bash  -v -d /cspp/dyno/mirs -p 6  "
   noaa20:
     save:
       - "NPR-MIRS-IMG*.nc"
       - "NPR-MIRS-SND*.nc"
-    driver: "run_mirs.bash  -v -f --dynanc=/cspp/dyno/mirs -p 6 -s n20 "
+    driver: "run_mirs.bash  -v -d /cspp/dyno/mirs -p 6 "
+  noaa21:
+    save:
+      - "NPR-MIRS-IMG*.nc"
+      - "NPR-MIRS-SND*.nc"
+    driver: "run_mirs.bash  -v -d /cspp/dyno/mirs -p 6 "
   metop-b:
     save:
       - "*.nc"
       - "*.nc"
-    driver: "run_mirs.bash -res HI --dynanc=/cspp/dyno/mirs -p 6 -f -v -s metopB " 
+    driver: "run_mirs.bash -r HI -d /cspp/dyno/mirs -p 6 -v  "
   metop-c:
     save:
       - "*.nc"
       - "*.nc"
-    driver: "run_mirs.bash -res HI --dynanc=/cspp/dyno/mirs -p 6 -f -v -s metopC " 
+    driver: "run_mirs.bash -r HI -d /cspp/dyno/mirs -p 6 -v  "
   noaa18:
     save:
       - "*.nc"
       - "*.nc"
-    driver: "run_mirs.bash -res HI --dynanc=/cspp/dyno/mirs -p 6 -f -v -s n18 "
+    driver: "run_mirs.bash -r HI -d /cspp/dyno/mirs -p 6 -v  "
   noaa19:
     save:
       - "*.nc"
       - "*.nc"
-    driver: "run_mirs.bash  -res HI --dynanc=/cspp/dyno/mirs -p 6 -f -v -s n19 "
+    driver: "run_mirs.bash  -r HI -d /cspp/dyno/mirs -p 6 -v  "
