--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Ruby
-      run: dnf -y update && dnf -y install ruby python3 python3-pip && pip install --user yamllint
+      run: dnf -y update && dnf -y install ruby python3 python3-pip && pip3 install --user yamllint
     - name: Run tests
       run: ruby -c bin/*.rb
     - name: Yaml Check
