--- a/config/ssec_push.yml
+++ b/config/ssec_push.yml
@@ -2,19 +2,18 @@
 uafgina-test:
   ftp:
     host: 192.168.56.31
-    dir:  /dbingest/fairbanks/
+    dir: "/dbingest/fairbanks/"
     options: "-F -B 12582912"
   glob:
-    - RNCSA*h5
-    - RCRIS*h5
-    - RATMS*h5
+  - RNCSA*h5
+  - RCRIS*h5
+  - RATMS*h5
 uafgina:
   ftp:
     host: ftp.ssec.wisc.edu
-    dir:  /dbingest/fairbanks/
+    dir: "/dbingest/fairbanks/"
     options: "-F -B 12582912"
   glob:
-    - RNCSA*h5
-    - RCRIS*h5
-    - RATMS*h5
-
+  - RNCSA*h5
+  - RCRIS*h5
+  - RATMS*h5
