--- a/config/acspo_awips.yml
+++ b/config/acspo_awips.yml
@@ -1,10 +1,12 @@
+---
 driver: acspo2awips.sh
 configs:
   default:
-   options: "--grid-coverage 0 --output-pattern UAF_AWIPS_{satellite}_{instrument}_{product_name}_{grid_name}_{begin_time} --source-name UAF "
-   grid: 203
-   save: 
-     - "*"
-   p2g_config: "uaf_awips_backend.ini"
+    options: "--grid-coverage 0 --output-pattern UAF_AWIPS_{satellite}_{instrument}_{product_name}_{grid_name}_{begin_time}
+      --source-name UAF "
+    grid: 203
+    save:
+    - "*"
+    p2g_config: uaf_awips_backend.ini
 limits:
   processor: 2
