--- a/config/acspo_geotif.yml
+++ b/config/acspo_geotif.yml
@@ -1,27 +1,34 @@
+---
 configs:
   viirs:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: "viirs_geotiff_grids.grd"
+    grid_file: viirs_geotiff_grids.grd
     tasks:
-     - "acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-     - "acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_overview --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif"
+    - acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_300 --dtype real4 --output-pattern
+      {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif
+    - acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_overview --output-pattern
+      {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif
     save:
-     - "*.tif"
+    - "*.tif"
   modis:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: "modis_geotiff_grids.grd"
+    grid_file: modis_geotiff_grids.grd
     tasks:
-     - "acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_500 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-     - "acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_overview --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif"
+    - acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_500 --dtype real4 --output-pattern
+      {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif
+    - acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_overview --output-pattern
+      {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif
     save:
-     - "*.tif"
+    - "*.tif"
   avhrr:
     p2g_args: "--tiled --compress DEFLATE"
-    grid_file: "avhrr_geotiff_grids.grd"
+    grid_file: avhrr_geotiff_grids.grd
     tasks:
-     - "acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_1000 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-     - "acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_overview --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif"
+    - acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_1000 --dtype real4 --output-pattern
+      {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif
+    - acspo2gtiff.sh --grid-coverage 0 -p sst -g alaska_overview --output-pattern
+      {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.tif
     save:
-     - "*.tif"
+    - "*.tif"
 limits:
   processor: 2
