--- a/config/cris_awips.yml
+++ b/config/cris_awips.yml
@@ -1,8 +1,9 @@
+---
 driver: drrtv2awips.sh
 configs:
-  default: 
-   options: "--adaptive-dnb"
-   grid: 203_10k
-   save: "SSEC_AWIPS_HYPER-AK*"
+  default:
+    options: "--adaptive-dnb"
+    grid: 203_10k
+    save: SSEC_AWIPS_HYPER-AK*
 limits:
   processor: 2
