--- a/config/mirs_l0.yml
+++ b/config/mirs_l0.yml
@@ -1,36 +1,37 @@
+---
 processing:
   npp:
     save:
-      - "NPR-MIRS-IMG*.nc"
-      - "NPR-MIRS-SND*.nc"
-    driver: "run_mirs.bash  -v -d /cspp/dyno/mirs -p 6  "
+    - NPR-MIRS-IMG*.nc
+    - NPR-MIRS-SND*.nc
+    driver: 'run_mirs.bash  -v -d /cspp/dyno/mirs -p 6  '
   noaa20:
     save:
-      - "NPR-MIRS-IMG*.nc"
-      - "NPR-MIRS-SND*.nc"
-    driver: "run_mirs.bash  -v -d /cspp/dyno/mirs -p 6 "
+    - NPR-MIRS-IMG*.nc
+    - NPR-MIRS-SND*.nc
+    driver: 'run_mirs.bash  -v -d /cspp/dyno/mirs -p 6 '
   noaa21:
     save:
-      - "NPR-MIRS-IMG*.nc"
-      - "NPR-MIRS-SND*.nc"
-    driver: "run_mirs.bash  -v -d /cspp/dyno/mirs -p 6 "
+    - NPR-MIRS-IMG*.nc
+    - NPR-MIRS-SND*.nc
+    driver: 'run_mirs.bash  -v -d /cspp/dyno/mirs -p 6 '
   metop-b:
     save:
-      - "*.nc"
-      - "*.nc"
-    driver: "run_mirs.bash -r HI -d /cspp/dyno/mirs -p 6 -v  "
+    - "*.nc"
+    - "*.nc"
+    driver: 'run_mirs.bash -r HI -d /cspp/dyno/mirs -p 6 -v  '
   metop-c:
     save:
-      - "*.nc"
-      - "*.nc"
-    driver: "run_mirs.bash -r HI -d /cspp/dyno/mirs -p 6 -v  "
+    - "*.nc"
+    - "*.nc"
+    driver: 'run_mirs.bash -r HI -d /cspp/dyno/mirs -p 6 -v  '
   noaa18:
     save:
-      - "*.nc"
-      - "*.nc"
-    driver: "run_mirs.bash -r HI -d /cspp/dyno/mirs -p 6 -v  "
+    - "*.nc"
+    - "*.nc"
+    driver: 'run_mirs.bash -r HI -d /cspp/dyno/mirs -p 6 -v  '
   noaa19:
     save:
-      - "*.nc"
-      - "*.nc"
-    driver: "run_mirs.bash  -r HI -d /cspp/dyno/mirs -p 6 -v  "
+    - "*.nc"
+    - "*.nc"
+    driver: 'run_mirs.bash  -r HI -d /cspp/dyno/mirs -p 6 -v  '
