--- a/config/mod14_gis.yml
+++ b/config/mod14_gis.yml
@@ -1,7 +1,8 @@
+---
 configs:
   default:
-   driver: "fire_to_shapefile"
-   save: 
-     - "*mod14.shp"
-     - "*mod14.dbf"
-     - "*mod14.shx"
+    driver: fire_to_shapefile
+    save:
+    - "*mod14.shp"
+    - "*mod14.dbf"
+    - "*mod14.shx"
