--- a/config/modis_mod14.yml
+++ b/config/modis_mod14.yml
@@ -1,10 +1,11 @@
+---
 configs:
   default:
-   driver: "mod14"
-   options: "-tv"
-   output_note: "The platform is pre-pended on the front of the output filrename pattern."
-   output: "%Y%m%d.%H%M.mod14.hdf"
-   txt_driver: "fireloc"
-   save: 
-     - "*mod14.hdf"
-     - "*mod14.hdf.txt"
+    driver: mod14
+    options: "-tv"
+    output_note: The platform is pre-pended on the front of the output filrename pattern.
+    output: "%Y%m%d.%H%M.mod14.hdf"
+    txt_driver: fireloc
+    save:
+    - "*mod14.hdf"
+    - "*mod14.hdf.txt"
