--- a/config/modis_tdf.yml
+++ b/config/modis_tdf.yml
@@ -1,7 +1,8 @@
+---
 terascan:
-  night_tdf: "SEDAS_MODIS_RADIANCE_daac.night.sh"
-  day_tdf: "SEDAS_MODIS_RADIANCE_daac.sh"
-  modis_bt_channels: "1^36"
+  night_tdf: SEDAS_MODIS_RADIANCE_daac.night.sh
+  day_tdf: SEDAS_MODIS_RADIANCE_daac.sh
+  modis_bt_channels: 1^36
   driver: "/opt/terascan/pass/tscan.bash_profile"
-save: 
-   - "*.tdf"
+save:
+- "*.tdf"
