--- a/config/noaa_viirs_fire.yml
+++ b/config/noaa_viirs_fire.yml
@@ -1,8 +1,9 @@
+---
 configs:
   default:
     i:
       command: " cspp_active_fire_noaa.sh --num-cpu 6 "
       save:
-       - "AFIMG*.nc"
-       - "*.txt"
-       - "*.log"
+      - AFIMG*.nc
+      - "*.txt"
+      - "*.log"
