--- a/config/viirs_awips.yml
+++ b/config/viirs_awips.yml
@@ -1,13 +1,15 @@
-driver: "unset POLAR2GRID_HOME; /opt/cspp/polar2grid_v_2_3/bin/viirs2awips.sh "
+---
+driver: 'unset POLAR2GRID_HOME; /opt/cspp/polar2grid_v_2_3/bin/viirs2awips.sh '
 driver_crefl_old: crefl2awips.sh
 configs:
   default:
-   options: "--grid-coverage 0 --source-name UAF --output-pattern \"UAF_AWIPS_{satellite}_{instrument}_{product_name}_{grid_name}_{begin_time}\" -p m03 m15 "
-   day_cover: "0.10"
-   grid: 203
-   save: 
-     - "UAF_AWIPS_*"
-   p2g_config: "uaf_awips_backend.ini"
-   crefl_bands: " viirs_crefl03 viirs_crefl04  viirs_crefl08 viirs_crefl09 viirs_crefl10 "
+    options: '--grid-coverage 0 --source-name UAF --output-pattern "UAF_AWIPS_{satellite}_{instrument}_{product_name}_{grid_name}_{begin_time}"
+      -p m03 m15 '
+    day_cover: '0.10'
+    grid: 203
+    save:
+    - UAF_AWIPS_*
+    p2g_config: uaf_awips_backend.ini
+    crefl_bands: " viirs_crefl03 viirs_crefl04  viirs_crefl08 viirs_crefl09 viirs_crefl10 "
 limits:
   processor: 2
