--- a/config/viirs_edr.yml
+++ b/config/viirs_edr.yml
@@ -1,7 +1,8 @@
+---
 configs:
   viirs:
-   driver: viirs_asci.sh
-   options: " --prod all "
+    driver: viirs_asci.sh
+    options: " --prod all "
 limits:
   processor: 2
-env: $CSPP_VIIRS_ASCI_HOME/viirs_asci_env.sh
+env: "$CSPP_VIIRS_ASCI_HOME/viirs_asci_env.sh"
